# eddit

./: .gitattributes  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build.yaml
src/: App.tsx  global.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  utils.rs
src-tauri/src/commands/: file.rs  video.rs
src-tauri/src/video/: cutter.rs  encoder.rs  merger.rs  mod.rs
src/components/common/: ErrorMessage.tsx
src/components/layout/: Footer.tsx  Header.tsx
src/components/video/: CompressionSettings.tsx  SegmentEditor.tsx  Timeline.tsx  VideoPlayer.tsx
src/contexts/: videoStore.ts
src/pages/: MainPage.tsx  VideoEditPage.tsx
src/services/: tauriApi.ts
src/types/: index.ts
