[package]
name = "eddit"
version = "0.1.0"
description = "A video cutting and processing tool"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "eddit_lib"
path = "src/main.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell ="2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }

[features]
# By default Tauri runs in production mode
# When `tauri dev` runs, it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# This feature enables the custom protocol
custom-protocol = ["tauri/custom-protocol"]
